--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0;url=https://ooo-kunaal.github.io/ooo-kunaal.github.io/src/index.html" />
+<meta content="0;url=https://ooo-kunaal.github.io/ooo-kunaal.github.io/src/index.html" />
